--- a/teknologi.html
+++ b/teknologi.html
@@ -19,11 +19,11 @@
 <body>
 	<div class="scrollmenu">
   		<a href="index.html">Heim</a>
-  		<a href="teknologi.html">Teknologiforståelse</a>
+  		<a class="active" href="teknologi.html">Teknologiforståelse</a>
 		<a href="konseptutvikling.html">Konseptutvikling og programmering</a>
   		<a href="#contact">YFF</a>
   		<a href="contact.html">Kontakt meg</a>
-  
+
 	</div>
 	<div class="container">
 		<h1>Teknologiforståelse</h1>
