--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 		}
 	</script>
 
-	<script src="resources/js/konseptutvikling.js"></script>	
+	<!--<script src="resources/js/konseptutvikling.js"></script>	-->
+	<script src="resources/js/arrays.js"></script>
 </body>
 </html>
