--- a/index.html
+++ b/index.html
@@ -126,6 +126,19 @@
 					  </video>
 				</div>				
 			</div>
+			<div>
+				<h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">Norge i rødt hvitt og blått</h1>
+				<svg name="hoved-ramme-usynlig" width="500" height="400">
+					<rect x="0" y="0" width="120" height="120" style="fill:#BA0C2F; stroke:#BA0C2F" />
+					<rect x="120" y="0" width="20" height="120" style="fill:white; stroke:white" />
+					<rect x="140" y="0" width="40" height="320" style="fill:#00205B; stroke:#00205B" />
+					<rect x="200" y="0" width="240" height="120" style="fill:#BA0C2F; stroke:#BA0C2F" />
+					<rect x="0" y="140" width="440" height="40" style="fill:#00205B; stroke:#00205B" />
+					<rect x="0" y="200" width="120" height="120" style="fill:#BA0C2F; stroke:#BA0C2F" />
+					<rect x="200" y="200" width="240" height="120" style="fill:#BA0C2F; stroke:#BA0C2F" />
+					<text x="10" y="10" fill="white" transform="rotate(30 20,40)">Ja vi elsker dette landet</text>
+				</svg>
+			</div>
 	
 			<!--
 
